# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [ "gbalz77"
          , "tilemage"
          , "bin/mar2dmp"
          , "bin/bulktext"
          , "bin/gbalz77tool"
          , "bin/struct_munger"
          , "bin/tilemage"
          , "bin/femaptool"
          ]
