[package]
name = "ea_suite_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
image = "0.25.6"
png = "0.17.16"
itertools = "0.12.1"
thiserror = "2.0.12"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
